# QtApp

./: CMakeLists.txt  Main.qml  SquareFuild.qml  main.cpp  squareobject.cpp  squareobject.h  tcpserverreceive.cpp  tcpserverreceive.h
functional_test/: send_to_app.py
test_ClientMonitoring/: CMakeLists.txt  tst_test1.cpp
